Added b3 function to shift all curves in z

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,13 @@ mvexperiment/__pycache__/experiment.cpython-37.pyc
 mvexperiment/__pycache__/mvFilesystem.cpython-37.pyc
 mvexperiment/__pycache__/mvObject.cpython-37.pyc
 mvexperiment/__pycache__/pathto.cpython-37.pyc
+.idea/nanoindentation.iml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
+.idea/workspace.xml
+test.ipynb
+e391eff5df0727daa5c0832cc7c688954a884d01ea0ddaa2.ipynb
+
+.idea/vcs.xml
