Nanosurf elastography refinement
b2: added cropping of curves to remove artefacts from filtering
b3: added z-shiftig of all curves to counter different estimate of CP for nanosurf
b2tob3: curves shifted in f, so that no negative values

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ test.ipynb
 e391eff5df0727daa5c0832cc7c688954a884d01ea0ddaa2.ipynb
 
 .idea/vcs.xml
+engine_original.py
+PickleForTest3c.pickle
+PickleForTest2d.pickle
