Shift Array added

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,10 @@ e391eff5df0727daa5c0832cc7c688954a884d01ea0ddaa2.ipynb
 engine_original.py
 PickleForTest3c.pickle
 PickleForTest2d.pickle
+ArrayData/ArrayData_test.csv
+ArrayData/ArrayData_test.png
+ArrayData/ArrayData_test.txt
+imname.png
+PickleForTest.pickle
+PickleForTest2.pickle
+PickleForTest2b.pickle
