ContactPoint finding by derivative added
see function engine. NanosurfOffsetDeriv()
CP finding from slope change not working

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ imname.png
 PickleForTest.pickle
 PickleForTest2.pickle
 PickleForTest2b.pickle
+__pycache__/chiaro.cpython-37.pyc
+PickleForTest2small2.pickle
