--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ PickleForTest2b.pickle
 __pycache__/chiaro.cpython-37.pyc
 PickleForTest2small2.pickle
 *.pyc
+.ipynb_checkpoints/analysis-checkpoint.ipynb
