--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ __pycache__/chiaro.cpython-37.pyc
 PickleForTest2small2.pickle
 *.pyc
 .ipynb_checkpoints/analysis-checkpoint.ipynb
+x.txt
+y.txt
+x.txt
+y.txt
