--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,12 @@ x.txt
 y.txt
 boh.pickle
 filter.ipynb
+gels/20191113-5percPEGonly01.pickle
+gels/20191203-PEGSH3.5.pickle
+gels/20191203-PEGSH5.pickle
+gels/20200129-pegonlysh35noGlass.pickle
+gels/20200129-pegonlysh35wGlass.pickle
+gels/20200129-pegonlysh50noGlass.pickle
+gels/20200129-pegonlysh50wGlass.pickle
+gels/20200228-pegonly35.pickle
+gels/20200228-pegonly50.pickle
