--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,11 @@ gels/20200129-pegonlysh50noGlass.pickle
 gels/20200129-pegonlysh50wGlass.pickle
 gels/20200228-pegonly35.pickle
 gels/20200228-pegonly50.pickle
+.spyproject/config/backups/workspace.ini.bak
+.spyproject/config/backups/vcs.ini.bak
+.spyproject/config/backups/encoding.ini.bak
+.spyproject/config/backups/codestyle.ini.bak
+filtana.py
+pro.txt
+pro2.txt
+filtana.py
