--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,8 @@ filtana.py
 pro.txt
 pro2.txt
 filtana.py
+gels/20191113-5percPEGonly01-later.pickle
+gels/20191203-PEGSH3.5-later.pickle
+gels/20191203-PEGSH5-later.pickle
+gels/20200129-pegonlysh35wGlass-later.pickle
+gels/20200129-pegonlysh50wGlass-later.pickle
