--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ gels/20191203-PEGSH3.5-later.pickle
 gels/20191203-PEGSH5-later.pickle
 gels/20200129-pegonlysh35wGlass-later.pickle
 gels/20200129-pegonlysh50wGlass-later.pickle
+gels/20200228-pegonly35-later.pickle
