--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@ gels/20191203-PEGSH5-later.pickle
 gels/20200129-pegonlysh35wGlass-later.pickle
 gels/20200129-pegonlysh50wGlass-later.pickle
 gels/20200228-pegonly35-later.pickle
+gels/prv.pickle
