--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,24 @@ gels/20200129-pegonlysh35wGlass-later.pickle
 gels/20200129-pegonlysh50wGlass-later.pickle
 gels/20200228-pegonly35-later.pickle
 gels/prv.pickle
+.spyproject/config/workspace.ini
+gels/01-20191113-02.pickle
+gels/01-20191113-0203.pickle
+gels/01-20191113-03.pickle
+gels/01-20191203-35.pickle
+gels/01-20191203-50-02.pickle
+gels/01-20191203-50-0203.pickle
+gels/01-20191203-50-03.pickle
+gels/01-20191203-50nocv.pickle
+gels/01-20200129-35cv.pickle
+gels/01-20200129-50cv.pickle
+gels/02-20191113-02.pickle
+gels/02-20191113-0203.pickle
+gels/02-20191113-03.pickle
+gels/02-20191203-35.pickle
+gels/02-20191203-50-02.pickle
+gels/02-20191203-50-0203.pickle
+gels/02-20191203-50-03.pickle
+gels/02-20191203-50nocv.pickle
+gels/02-20200129-35cv.pickle
+gels/02-20200129-50cv.pickle
