--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,4 @@ gels/02-20191203-50-03.pickle
 gels/02-20191203-50nocv.pickle
 gels/02-20200129-35cv.pickle
 gels/02-20200129-50cv.pickle
+gels/01-bilayer.pickle
