--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,7 @@ gels/02-20191203-50nocv.pickle
 gels/02-20200129-35cv.pickle
 gels/02-20200129-50cv.pickle
 gels/01-bilayer.pickle
+mariana/35.pickle
+mariana/35.np.txt
+mariana/35-FD.png
+mariana/35-all.png
